# BattleCity_Game_Remake

./: CMakeLists.txt  README.md
Client/: Client.sln
Client/Client/: BackgroundHelper.h  Client.qrc  Client.vcxproj  Client.vcxproj.filters  ClientServer.cpp  ClientServer.h  ControlChoiceWindow.cpp  ControlChoiceWindow.h  CreateOrJoinGameWindow.cpp  CreateOrJoinGameWindow.h  DisplayCodeWindow.cpp  DisplayCodeWindow.h  GameMapWindow.cpp  GameMapWindow.h  GameOverWindow.cpp  GameOverWindow.h  GeneralSettingsWindow.cpp  GeneralSettingsWindow.h  InGameSettingsWindow.cpp  InGameSettingsWindow.h  LevelSelectionWindow.cpp  LevelSelectionWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  NoGreenScreen.cpp  NoGreenScreen.h  Resource.qrc  StartGameWindow.cpp  StartGameWindow.h  VictoryWindow.cpp  VictoryWindow.h  main.cpp
ProjectModerenCpp/: ProjectModerenCpp.sln
ProjectModerenCpp/ProjectModerenCpp/: Bomb.cpp  Bomb.cppm  Bomb.h  BonusLife.cpp  BonusLife.h  Bullet.cpp  Bullet.h  CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  DataTest.db  Database.cpp  Database.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  Main.cpp  Map.cpp  Map.h  MovementObject.cpp  MovementObject.h  NovaDatabase.db  NovaDatabase2.db  NovaDatabase3.db  NovaDatabase4.db  NovaDatabase5.db  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  ProjectModerenCpp.vcxproj  ProjectModerenCpp.vcxproj.filters  Tank.cpp  Tank.cppm  Tank.h  Wall.cpp  Wall.cppm  (+8 more)
Validation/: Validation.sln
(+4 files in other folders)
